<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Deutsch (Standardsprache) -->
    <string name="app_name">Arztsuche</string>
    <string name="where">Wo</string>
    <string name="what">Was</string>
    <string name="search">Suche</string>
    <string name="location">Standort</string>
    <string name="noresults">Keine Resultate zurückerhalten</string>
    <string name="serverresponse">Serverantwort: %s</string>
    <string name="ambiguousresults">Die Suche ergab %i mehrdeutige Resultate</string>
    <string name="provider_enabled">Standortdienst \"%s\" ist eingeschaltet</string>
    <string name="provider_disabled">Standortdienst \"%s\" ist ausgeschaltet</string>
    <string name="ask_user_to_enable_location_sources">Momentan sind keine Standortquellen verfügbar. Eine aktuelle Standorterkennung erhalten Sie, wenn Sie\n\n• GPS und drahtlose Netzwerke in den Standorteinstellungen aktivieren\n\n• WLAN aktivieren</string>
    <string name="settings">Einstellungen</string>
    <string name="neterror">Netzwerkfehler</string>
    <string name="no_network_check_settings">Beim Aufbau der Verbindung zum Server ist ein Fehler aufgetreten.\nBitte stellen Sie sicher, dass Sie mit dem Internet verbunden sind und probieren Sie es erneut.</string>
    <string name="provider_status_out_of_service">Standortdienst \"%s\": Ausser Betrieb</string>
    <string name="provider_status_temp_unavailable">Standortdienst \"%s\": Momentan nicht verfügbar</string>
    <string name="provider_status_available">Standortdienst \"%s\": Verfügbar</string>
    <string name="provider_status_unknown">Standortdienst \"%s\": Unbekannter Status</string>
    <string name="fail_no_provider">Fehler: Kein Standortdienst verfügbar</string>
    <string name="myposition">Mein Standort</string>
    <string name="category">Arztkategorie</string>
    <string name="no_valid_category">\"%s\" ist keine gültige Kategorie.</string>
    <string name="choose_category_from_list">Bitte wählen Sie eine Kategorie aus der Liste aus oder lassen Sie das Feld leer, um alle Kategorien anzuzeigen.</string>
    <string name="no_email">(keine E-Mail-Adresse)</string>
    <string name="there_is_no_email">Für diesen Eintrag ist keine E-Mail-Adresse vorhanden.</string>
    <string name="no_tel">(keine Telefonnummer)</string>
    <string name="there_is_no_tel">Für diesen Eintrag ist keine Telefonnummer vorhanden.</string>
    <string name="spitaeler">Spitäler</string>
    <string name="akupunkturaerzte">Akupunkturärzte</string>
    <string name="allergologen">Allergologen</string>
    <string name="allgemeinaerzte">Allgemeinärzte</string>
    <string name="anaesthesisten">Anästhesisten</string>
    <string name="arbeitsmediziner">Arbeitsmediziner</string>
    <string name="augenaerzte">Augenärzte</string>
    <string name="chirurgen">Chirurgen</string>
    <string name="endokrinologen">Endokrinologen</string>
    <string name="frauenaerzte">Frauenärzte</string>
    <string name="geriater">Geriater</string>
    <string name="gynaekologen">Gynäkologen</string>
    <string name="haematologen">Hämatologen</string>
    <string name="handchirurgen">Handchirurgen</string>
    <string name="hautaerzte">Hautärzte</string>
    <string name="homoeopathieaerzte">Homöopathieärzte</string>
    <string name="infektiologen">Infektiologen</string>
    <string name="internisten">Internisten</string>
    <string name="kardiologen">Kardiologen</string>
    <string name="kieferchirurgen">Kieferchirurgen</string>
    <string name="kinderaerzte">Kinderärzte</string>
    <string name="kinderpsychiater">Kinderpsychiater</string>
    <string name="lungenaerzte">Lungenärzte</string>
    <string name="magendarmaerzte">Magen-Darm-Ärzte</string>
    <string name="manuellemedizin">Manuelle Medizin</string>
    <string name="nephrologen">Nephrologen</string>
    <string name="neurologen">Neurologen</string>
    <string name="ohrenaerzte">Ohrenärzte</string>
    <string name="onkologen">Onkologen</string>
    <string name="orthopaeden">Orthopäden</string>
    <string name="pathologen">Pathologen</string>
    <string name="plastischechirurgen">Plastische Chirurgen</string>
    <string name="psychiater">Psychiater</string>
    <string name="rechtsmediziner">Rechtsmediziner</string>
    <string name="roentgenaerzte">Röntgenärzte</string>
    <string name="sportmediziner">Sportmediziner</string>
    <string name="tropenaerzte">Tropenärzte</string>
    <string name="urologen">Urologen</string>
    <string name="about">Über</string>
    <string name="abouttext">Die Arztsuche-App der eonum AG bietet Ihnen eine praktische Umkreissuche nach Hausärzten, Fachärzten und Spitälern. Unsere Datenbanken umfassen Informationen zu mehr als 4000 Ärzten, allen relevanten Spitälern und einer Auswahl weiterer Anbieter (Apotheken, Fachgeschäfte, Versicherer, etc.).\n\nDie Suche kann nach Fachdisziplin und Behandlungswunsch eingeschränkt werden. Gerne nehmen wir Ihre Rückmeldungen zum Service entgegen. Sollten Sie selbst Arzt oder Anbieter sein, ergänzen wir gerne unseren Datenbestand mit zusätzlichen Informationen. Sie können uns hierzu auch eine Liste Ihrer Tätigkeiten und Behandlungsschwerpunkte zusenden.\n\nWir publizieren keine Bewertungen von Ärzten, behalten uns jedoch vor, individuelle sachliche Rückmeldungen für die Sortierung von Suchergebnissen und einer nutzerspezifischen Filterung, bis hin zum Ausschluss einzelner Einträge, zu verwenden.\n\nIhr Team der eonum AG\nE-mail an arztsuche@eonum.ch\nWir beantworten Ihr Schreiben (ausgenommen anonyme Mails) innerhalb von 5 Arbeitstagen.\n\nImpressum:\nhttp://eonum.ch/contact.html</string>
</resources>
