<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowWhere"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textviewWhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/where"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/searchforWhere"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/location"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/getposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/myposition"
                android:src="@android:drawable/ic_menu_mylocation" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowWhat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textviewWhat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/what"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/searchforWhat"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/category"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </TableRow>
    </TableLayout>

    <ch.eonum.HealthMapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0TgYVnfeZXcxljrkb63n3SKThmwvIV84CTIGzXg"
        android:clickable="true" />

</LinearLayout>
